kibana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: globallb
  annotations:
    io.rancher.scheduler.global: "true"
spec:
  backend:
    serviceName: kibana
    servicePort: 80
